# mem

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  eslint.config.js  package-lock.json  package.json  prd_grounded_factorial_memory_diagnosis_generator.md  tsconfig.json  vitest.config.ts
memory-bench/: .gitignore  README.md  conftest.py  pyproject.toml
memory-bench/data/ftp-oracle/: README.md  codeprobe.json  gascity_dashboard.json  gpk.json  scix_experiments.json
memory-bench/examples/compare-ours-mem0/: corpus.json  queries.json  relevance.json  smoke.py
memory-bench/fixtures/: build_replay_store.mjs
memory-bench/fixtures/pipeline/: dolt_rows.json  sessions.json
memory-bench/fixtures/sequences/: agent_diagnostics_triage.json  agentic_memory_supersession.json  codescalebench_eval_task.json  gascity_backend_conventions.json  gascity_bead_triage.json  harbor_run_config.json  postgres_query_optimization.json  prd_build_orchestration.json  sea_eval_schema_anchor.jsonl  sourcegraph_mcp_workflow.json  sprint_epic_monitoring.json
memory-bench/membench/: __init__.py  _claude_cli.py  armcompare.py  assess.py  cli.py  corpus.py  cross_session.py  dataset.py  events_join.py  forward_capture.py  handoff_efficiency.py  mem_cli.py  merge_join.py  replay.py  runtime.py  session_join.py  task_types.py  transcript_archive.py  validity.py
memory-bench/membench/autotune/: __init__.py  _coerce.py  calibrate.py  config.py  ledger.py  objective.py  program.md
memory-bench/membench/bbon/: __init__.py  aggregate.py  comparative_judge.py  extract.py  local_stack_judge.py  models.py  narrative_diff.py
memory-bench/membench/bundle/: __init__.py  assemble.py  replay.py
memory-bench/membench/compare/: __init__.py  circularity_baseline.py  io.py  judged_relevance.py  relevance_calibration.py  relevance_judge.py  retrieval_compare.py
memory-bench/membench/config/: __init__.py  rigs.py
memory-bench/membench/engines/: __init__.py  client.py  endpoints.py  metrics_scrape.py  run.py  (+2 more)
memory-bench/scripts/: admit_batch_guarded.py  arm_analysis.py  arm_narrative.py  assemble_batch.py  audit_alias_recurrence.py  autotune_calibrate.py  autotune_status.py  autotune_trial.py  build_headline_report.py  build_merged_join.py  build_session_join.py  calibrate_ftp_shapes.py  classify_task_types.py  compute_cross_session.py  curate_bundle_oracles.py  engine_throughput_sweep.py  eval_synthetic_arms.py  eval_synthetic_outcome_lift.py  gate0_nonflat_probe.py  gate_mem_slice.py  generate_worlds.py  run_compare_ours_mem0.py  run_gate_probe.py  run_grid.py  run_grid_3arm.py  run_grid_3arm_graded.py  select_rank.py  smoke_realrun_trajectory.py  verify_worlds.py
memory-bench/tests/: helpers.py  paths.py  semantic_fakes.py  test_action_impact.py  test_action_impact_run.py  test_admit_validity_gate.py  test_amem_system.py  test_arm_analysis_cli.py  test_arm_narrative_cli.py  test_arm_vector.py  test_armcompare.py  test_assemble_batch.py  test_assess.py  test_async_bridge.py  test_autotune.py  test_autotune_calibrate.py  test_base_image.py  test_base_rate.py  test_base_rate_spike.py  test_bbon_aggregate.py  test_bbon_comparative_judge.py  test_bbon_extract.py  test_bbon_models.py  test_bbon_narrative_diff.py  test_build_headline_report.py  test_build_merged_join.py  test_builtin_system.py  test_bundle_assemble.py  test_bundle_grid.py  test_bundle_replay.py  test_circularity_baseline.py  test_compare_io.py  test_consolidating_system.py  test_consolidation_runner.py  test_control_conditions.py  test_control_conditions_grid.py  test_control_grid.py  test_corpus.py  test_cross_session.py  test_curve.py  (+100 more)
(+395 files in other folders)
