[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "membench"
version = "0.1.0"
description = "Agentic Memory Evaluation Harness — Spec Phase-1 skeleton (Harbor 3-condition substrate)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "toml>=0.10",
]

# Harbor (harbor-framework/harbor, Apache-2.0) is the execution substrate for real
# `harbor run` invocations. The skeleton + its tests do NOT require Harbor at import
# time — task dirs are emitted in Harbor's real format and validated against
# harbor.TaskConfig only when the package is present (see tests/test_harbor_adapter.py).
[project.optional-dependencies]
harbor = ["harbor>=0.3"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11", "black>=24.0", "types-toml>=0.10"]

[project.scripts]
membench = "membench.cli:main"

[tool.setuptools.packages.find]
include = ["membench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# black is the sole formatter (also invoked by the editor's black-on-save hook,
# which reads this block) — ruff lints but does NOT format, so the two never fight.
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# PEP8 (E) + pyflakes (F) + isort (I) + pyupgrade (UP) + bugbear (B) +
# simplify (SIM) + comprehensions (C4) + ruff (RUF) + pep8-naming (N).
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "N"]

[tool.mypy]
python_version = "3.11"
strict = true

# OpenTelemetry ships no type information for some call sites; allow untyped calls
# into it without relaxing strictness for our own code.
[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true
disallow_untyped_calls = false

# Competitive arms lazily import optional memory SDKs that ship no type stubs and
# need not be installed for the suite to load; silence import-not-found uniformly.
[[tool.mypy.overrides]]
module = [
    "mem0",
    "mem0.*",
    "agentic_memory",
    "agentic_memory.*",
    "nat.*",
    "graphiti_core",
    "graphiti_core.*",
    "data_designer",
    "data_designer.*",
]
ignore_missing_imports = true

# Harbor (the eval framework) is an optional dep, lazily imported inside the exec
# path and shipping no stubs; ignore-missing keeps the type gate green whether or
# not it's installed (it is required at RUNTIME, validated where it is imported).
[[tool.mypy.overrides]]
module = ["harbor.*"]
ignore_missing_imports = true
